# jamtoysynth

./: CMakeLists.txt
src/: CMakeLists.txt  audio_output.c  audio_output.h  instrument.c  instrument.h  main.c  synth.c  synth.h
